// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComparisonStatusIcon.OutOfSync 1`] = `
Array [
  <i
    className="fa fa-arrow-alt-circle-up"
    qe-id="utils-sync-status-title"
    style={
      Object {
        "color": "#f4c030",
      }
    }
    title="OutOfSync"
  />,
  " ",
]
`;

exports[`ComparisonStatusIcon.Synced 1`] = `
Array [
  <i
    className="fa fa-check-circle"
    qe-id="utils-sync-status-title"
    style={
      Object {
        "color": "#18BE94",
      }
    }
    title="Synced"
  />,
  " ",
]
`;

exports[`ComparisonStatusIcon.Unknown 1`] = `
Array [
  <i
    className="fa fa-circle-notch fa-spin"
    qe-id="utils-sync-status-title"
    style={
      Object {
        "color": "#CCD6DD",
      }
    }
    title="Unknown"
  />,
  " ",
]
`;

exports[`HealthStatusIcon.Degraded 1`] = `
<i
  className="fa fa-heart-broken"
  qe-id="utils-health-status-title"
  style={
    Object {
      "color": "#E96D76",
    }
  }
  title="Degraded"
/>
`;

exports[`HealthStatusIcon.Healthy 1`] = `
<i
  className="fa fa-heart"
  qe-id="utils-health-status-title"
  style={
    Object {
      "color": "#18BE94",
    }
  }
  title="Healthy"
/>
`;

exports[`HealthStatusIcon.Missing 1`] = `
<i
  className="fa fa-ghost"
  qe-id="utils-health-status-title"
  style={
    Object {
      "color": "#CCD6DD",
    }
  }
  title="Missing"
/>
`;

exports[`HealthStatusIcon.Progressing 1`] = `
<i
  className="fa fa fa-circle-notch fa-spin"
  qe-id="utils-health-status-title"
  style={
    Object {
      "color": "#0DADEA",
    }
  }
  title="Progressing"
/>
`;

exports[`HealthStatusIcon.Suspended 1`] = `
<i
  className="fa fa-pause-circle"
  qe-id="utils-health-status-title"
  style={
    Object {
      "color": "#CCD6DD",
    }
  }
  title="Suspended"
/>
`;

exports[`HealthStatusIcon.Unknown 1`] = `
<i
  className="fa fa-question-circle"
  qe-id="utils-health-status-title"
  style={
    Object {
      "color": "#CCD6DD",
    }
  }
  title="Unknown"
/>
`;

exports[`OperationState.Deleting 1`] = `
Array [
  <i
    className="fa fa-circle-notch fa-spin"
    qe-id="utils-operations-status-title"
    style={
      Object {
        "color": "#0DADEA",
      }
    }
    title="Deleting"
  />,
  " ",
  "Deleting",
]
`;

exports[`OperationState.Sync OK 1`] = `
Array [
  <i
    className="fa fa-check-circle"
    qe-id="utils-operations-status-title"
    style={
      Object {
        "color": "#18BE94",
      }
    }
    title="Sync OK"
  />,
  " ",
  "Sync OK",
]
`;

exports[`OperationState.Sync error 1`] = `
Array [
  <i
    className="fa fa-times-circle"
    qe-id="utils-operations-status-title"
    style={
      Object {
        "color": "#E96D76",
      }
    }
    title="Sync error"
  />,
  " ",
  "Sync error",
]
`;

exports[`OperationState.Sync failed 1`] = `
Array [
  <i
    className="fa fa-times-circle"
    qe-id="utils-operations-status-title"
    style={
      Object {
        "color": "#E96D76",
      }
    }
    title="Sync failed"
  />,
  " ",
  "Sync failed",
]
`;

exports[`OperationState.Syncing 1`] = `
Array [
  <i
    className="fa fa-circle-notch fa-spin"
    qe-id="utils-operations-status-title"
    style={
      Object {
        "color": "#0DADEA",
      }
    }
    title="Syncing"
  />,
  " ",
  "Syncing",
]
`;

exports[`OperationState.Unknown 1`] = `
Array [
  <i
    className="fa fa-circle-notch fa-spin"
    qe-id="utils-operations-status-title"
    style={
      Object {
        "color": "#0DADEA",
      }
    }
    title="Unknown"
  />,
  " ",
  "Unknown",
]
`;

exports[`OperationState.quiet 1`] = `null`;

exports[`OperationState.undefined 1`] = `null`;

exports[`ResourceResultIcon.Hook.Error 1`] = `
<i
  className="fa fa-heart-broken"
  style={
    Object {
      "color": "#E96D76",
    }
  }
/>
`;

exports[`ResourceResultIcon.Hook.Failed 1`] = `
<i
  className="fa fa-heart-broken"
  style={
    Object {
      "color": "#E96D76",
    }
  }
/>
`;

exports[`ResourceResultIcon.Hook.Running 1`] = `
<i
  className="fa fa-circle-notch fa-spin"
  style={
    Object {
      "color": "#0DADEA",
    }
  }
  title="Running: my-message;"
/>
`;

exports[`ResourceResultIcon.Hook.Succeeded 1`] = `
<i
  className="fa fa-heart"
  style={
    Object {
      "color": "#18BE94",
    }
  }
/>
`;

exports[`ResourceResultIcon.Hook.Terminating 1`] = `
<i
  className="fa fa-circle-notch fa-spin"
  style={
    Object {
      "color": "#0DADEA",
    }
  }
/>
`;

exports[`ResourceResultIcon.Pruned 1`] = `
<i
  className="fa fa-heart"
  style={
    Object {
      "color": "#CCD6DD",
    }
  }
/>
`;

exports[`ResourceResultIcon.SyncFailed 1`] = `
<i
  className="fa fa-heart-broken"
  style={
    Object {
      "color": "#E96D76",
    }
  }
/>
`;

exports[`ResourceResultIcon.Synced 1`] = `
<i
  className="fa fa-heart"
  style={
    Object {
      "color": "#18BE94",
    }
  }
  title="Synced: my-message"
/>
`;
